--- a/read_xml.ipynb
+++ b/read_xml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "fdf0a67e",
    "metadata": {},
    "outputs": [],
@@ -12,51 +12,58 @@
     "\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import *\n",
-    "\n"
+    "from pyspark.sql.types import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "c53b4ef8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize SparkSession\n",
-    "spark = SparkSession.builder.appName(\"ReadXML\").config(\"spark.jars.packages\", \"com.databricks:spark-xml_2.12:0.13.0\").getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .appName(\"ReadXML\")\n",
+    "    .config(\"spark.jars.packages\", \"com.databricks:spark-xml_2.12:0.13.0\")\n",
+    "    .getOrCreate()\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "d4521853",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the path to your XML file\n",
-    "xml_file_path = \"books.xml\"\n",
+    "xml_file_path = \"./input/books.xml\"\n",
     "\n",
+    "# Define row tag to be extracted\n",
     "rowTag = \"book\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "5ca90c44",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read XML file into DataFrame\n",
-    "df = spark.read \\\n",
-    "    .format('com.databricks.spark.xml') \\\n",
-    "    .option(\"rowTag\", rowTag) \\\n",
-    "    .load(xml_file_path)"
+    "df = (\n",
+    "    spark.read\n",
+    "    .format('com.databricks.spark.xml')\n",
+    "    .option(\"rowTag\", rowTag)\n",
+    "    .load(xml_file_path)\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "id": "fa766461",
    "metadata": {},
    "outputs": [
@@ -85,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "e6d5dd5f",
    "metadata": {},
    "outputs": [
@@ -121,53 +128,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "832979d5",
-   "metadata": {},
-   "source": [
-    "# Write xml:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6b601fcb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = [(1, \"John\"), (2, \"Jane\"), (3, \"Jim\")]\n",
-    "\n",
-    "schema = StructType([\n",
-    "    StructField(\"id\", IntegerType(), True),\n",
-    "    StructField(\"name\", StringType(), True)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "5fe61ce5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = spark.createDataFrame(data, schema)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "fc2cf585",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "xmlFile = \"output/xml/file.xml\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "9a31f6f1",
+   "execution_count": 36,
+   "id": "5cdaba0e-8a50-4b4e-8b67-73dfd02bec74",
    "metadata": {},
    "outputs": [
     {
@@ -179,21 +142,87 @@
     }
    ],
    "source": [
-    "\n",
-    "df \\\n",
-    "    .select(struct(\"id\", \"name\").alias(\"root\")) \\\n",
-    "    .coalesce(1) \\\n",
-    "    .write \\\n",
-    "    .mode(\"overwrite\") \\\n",
-    "    .format('com.databricks.spark.xml') \\\n",
-    "    .option('rootTag', 'root') \\\n",
-    "    .option('rowTag', 'row') \\\n",
-    "    .save(xmlFile)"
+    "(\n",
+    "    df.write\n",
+    "    .format(\"parquet\")\n",
+    "    .saveAsTable(\"xml_tb\")\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
+   "id": "ad778eab-f9ae-41b7-8821-f1d8988fbe96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    df.write\n",
+    "    .format(\"parquet\")\n",
+    "    .save(\"xml_tb_parquet\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7914b807-83cc-4b95-8d23-5b4def8c0119",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------+-----------+\n",
+      "|namespace|tableName|isTemporary|\n",
+      "+---------+---------+-----------+\n",
+      "|  default|   xml_tb|      false|\n",
+      "+---------+---------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\n",
+    "    \"\"\"show tables\"\"\"\n",
+    ").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5ce7eb13-ea4f-49a7-86ce-f5a514df872a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------------------+--------------------+---------------+-----+------------+--------------------+\n",
+      "|  _id|              author|         description|          genre|price|publish_date|               title|\n",
+      "+-----+--------------------+--------------------+---------------+-----+------------+--------------------+\n",
+      "|bk101|Gambardella, Matthew|\\n\\n\\n         An...|       Computer|44.95|  2000-10-01|XML Developer's G...|\n",
+      "|bk102|          Ralls, Kim|A former architec...|        Fantasy| 5.95|  2000-12-16|       Midnight Rain|\n",
+      "|bk103|         Corets, Eva|After the collaps...|        Fantasy| 5.95|  2000-11-17|     Maeve Ascendant|\n",
+      "|bk104|         Corets, Eva|In post-apocalyps...|        Fantasy| 5.95|  2001-03-10|     Oberon's Legacy|\n",
+      "|bk105|         Corets, Eva|The two daughters...|        Fantasy| 5.95|  2001-09-10|  The Sundered Grail|\n",
+      "|bk106|    Randall, Cynthia|When Carla meets ...|        Romance| 4.95|  2000-09-02|         Lover Birds|\n",
+      "|bk107|      Thurman, Paula|A deep sea diver ...|        Romance| 4.95|  2000-11-02|       Splish Splash|\n",
+      "|bk108|       Knorr, Stefan|An anthology of h...|         Horror| 4.95|  2000-12-06|     Creepy Crawlies|\n",
+      "|bk109|        Kress, Peter|After an inadvert...|Science Fiction| 6.95|  2000-11-02|        Paradox Lost|\n",
+      "|bk110|        O'Brien, Tim|Microsoft's .NET ...|       Computer|36.95|  2000-12-09|Microsoft .NET: T...|\n",
+      "+-----+--------------------+--------------------+---------------+-----+------------+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"\"\"select * from xml_tb limit 10\"\"\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "c123578e",
    "metadata": {},
    "outputs": [],
@@ -206,6 +235,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3fa0a9af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a7bf934-5a8b-45a2-bc8c-ff0ce175d0d5",
    "metadata": {},
    "outputs": [],
    "source": []
